# sharer

./: .gitignore  Cargo.toml  Makefile  README.md  beta.md  build.rs  mira-manifest.rc  profile.py
.cargo/: config.toml
configs/: config.libx264.toml  config.libx264.win.toml  config.nvenc.toml  config.vp9.toml
resources/icons/: mira.icns  png2icns.sh
src/: capture.rs  config.rs  d3d.rs  display.rs  encoder.rs  main.rs  output.rs  performance_profiler.rs  result.rs  signaller.rs  yuv_converter.rs
src/auth/: mod.rs
src/capture/: capturer.rs  d3d.rs  display.rs  frame.rs  mod.rs  wgc_capture.rs  yuv_converter.rs
src/capture/audio/: mod.rs
src/capture/display/: mod.rs
src/capture/macos/: LICENSE.txt  capture_engine.rs  config.rs  display.rs  ffi.rs  ffi_sc.rs  frame.rs  macos_capture.rs  macos_sc_capture.rs  mod.rs  pcm_buffer.rs  screen_recorder.rs
src/capture/wgc/: d3d.rs  display.rs  mod.rs  wgc_capture.rs
src/capture/yuv_convert/: duplicator.rs  dx_math.rs  mod.rs  shader.rs  yuv_converter.rs
src/encoder/: ffmpeg.rs  frame_pool.rs  mod.rs
src/gui/: app.rs  macros.rs  material_button.rs  material_card.rs  material_input.rs  message.rs  mod.rs  resource.rs
src/gui/component/: avatar.rs  invite_info_card.rs  mod.rs  sharing.rs  start.rs
src/gui/page/: mod.rs  sharing.rs  start.rs
src/gui/theme/: color.rs  container.rs  icon.rs  menu.rs  mod.rs  picklist.rs  scrollable.rs  svg.rs  tab.rs  text.rs  text_input.rs  widget.rs
src/gui/theme/button/: fab.rs  filled.rs  icon.rs  mod.rs
src/inputs/: mod.rs  parse_key.rs
src/output/: file_output.rs  mod.rs  noop_output.rs  webrtc_output.rs  webrtc_peer.rs
src/signaller/: mod.rs  signaller.rs  websocket_signaller.rs
