[package]
name = "mira_sharer"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.14", features = ["derive"] }
tokio = { version = "1.15", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
webrtc = "0.7.3"
serde = "1.0.145"
serde_json = "1.0.70"
async-trait = "0.1.51"
log = "0.4.17"
env_logger = "0.10.0"
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
url = "2.3.1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
chrono = "0.4.22"
dyn-clone = "1.0.4"
uuid = "1.2.1"
bytes = "1.2.1"
enigo = { git = "https://github.com/mira-screen-share/enigo", branch = "master" }
ac-ffmpeg = { git = "https://github.com/mira-screen-share/rust-ac-ffmpeg", branch = "dev" }
toml = "0.7.4"
itertools = "0.10.5"
howlong = "0.1.7"
rtcp = "0.7.1"
cpal = "0.15.2"
iced = { version = "0.9.0", features = ["tokio", "image", "svg"] }
strum_macros = "0.24.3"
strum = "0.24.1"
iced_aw = { version = "0.5.2", features = ["tabs"] }


[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.108"
block = "0.1.6"

[target.'cfg(target_os = "windows")'.dependencies]
[dependencies.windows]
version = "0.48.0"
features = [
    "Data_Xml_Dom",
    "Foundation",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Performance",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Imaging",
    "Win32_System_WinRT_Direct3D11",
]

[build-dependencies]
embed-resource = "2.1.1"
